objects/FundingTypeInfo__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProdName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProdName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product2Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProductType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FundingTypeInfo</label>
    <listViews>
        <fullName>View</fullName>
        <columns>ProdName__c</columns>
        <columns>Funding_Type__c</columns>
        <columns>Product2Id__c</columns>
        <columns>ProductType__c</columns>
        <filterScope>Everything</filterScope>
        <label>View</label>
    </listViews>
</CustomObject>